--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/portfolio/saturn.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="OZinUMy27J4LR1YagQuUS4U2eD0aGYny-Qb6F7OEoTY" />
     <meta property="og:title" content="Mi portafolio">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Juan Mart&iacute;nez">
